done with all Oop

--- a/app/src/main/res/layout/fragment_c_sharp_oop_1.xml
+++ b/app/src/main/res/layout/fragment_c_sharp_oop_1.xml
@@ -50,7 +50,7 @@
             android:id="@+id/P_Variables_Text2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="OOP refers to Object Oriented Programming, which is a programming approach that arranges code according to the idea of objects, which represent tangible entities in the real world. In OOP an object represents an instance of a class, which acts as a blueprint or template for constructing objects"
+            android:text="Object-Oriented Programming (OOP) is a term used in C#. It is a paradigm for programming that places a strong emphasis on structuring code around objects, which are instances of classes. In order to design software systems, OOP emphasizes the idea of objects, their attributes, and their interactions."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -134,7 +134,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/callout_background"
-            android:text="Java is a popular programming language that fully supports OOP and provides built-in features and syntax for implementing these concepts."
+            android:text="C# is a popular programming language that fully supports OOP and provides built-in features and syntax for implementing these concepts."
             app:layout_constraintBottom_toBottomOf="@+id/p_Variables_imageView"
             app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
             app:layout_constraintHorizontal_bias="0.0"
@@ -172,7 +172,7 @@
             android:id="@+id/P_Operators_Text03"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/c_oop1"
+            android:text="@string/c_1"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -236,7 +236,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Attributes-Encapsulation"
+            android:text="C# Attributes - Encapsulation"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -251,7 +251,7 @@
             android:id="@+id/conditiontextView4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Class attributes are often declared as private in encapsulation, which means they may only be accessed within the class itself. This is done to conceal the internal implementation details while also protecting the data from direct alteration by external programs. Encapsulation encourages the use of public methods, known as getters and setters, to interact with the attributes rather than directly accessing them."
+            android:text="To various program elements including classes, methods, properties, and fields, attributes are used to add metadata or extra information. Although attributes by themselves do not directly help to encapsulation, they do offer a mechanism to annotate and decorate code parts with extra information, improving organization, documentation, and behavior modification."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -261,12 +261,13 @@
             app:layout_constraintTop_toBottomOf="@+id/conditiontextView3"
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
+
         <TextView
-            android:id="@+id/conditiontextView"
+            android:id="@+id/conditiontextView10"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Class Methods-Encapsulation"
+            android:text="C# Constructors - Encapsulation"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -278,41 +279,10 @@
             tools:ignore="TextSizeCheck,VisualLintLongText" />
 
         <TextView
-            android:id="@+id/conditiontextView5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Class methods are critical for encapsulation, which is one of the key ideas of Object-Oriented Programming (OOP). Class methods, also known as member methods or instance methods, are connected with class objects and enable them to perform actions or offer functionality."
-            android:textColor="#000000"
-            android:textIsSelectable="false"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/conditiontextView"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
-
-
-        <TextView
-            android:id="@+id/conditiontextView10"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Constructors-Encapsulation"
-            android:textColor="#000000"
-            android:textIsSelectable="false"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
-            app:layout_constraintTop_toBottomOf="@+id/conditiontextView5"
-            tools:ignore="TextSizeCheck,VisualLintLongText" />
-
-        <TextView
             android:id="@+id/conditiontextView9"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Constructors serve an important part in encapsulation by providing a means for initializing an object's state. A constructor is a particular method called when an object is created with the new keyword. It enables you to configure the object's attributes and perform any necessary setup activities."
+            android:text="Constructors play a vital role in encapsulation, which is one of the fundamental principles of object-oriented programming (OOP). Encapsulation involves bundling data and methods together within a class and controlling access to them from outside the class."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
@@ -327,7 +297,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Modifiers -Encapsulation"
+            android:text="C# Modifiers - Encapsulation"
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="20sp"
@@ -342,7 +312,7 @@
             android:id="@+id/conditiontextView7"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Modifiers play an important role in encapsulation because they govern the access levels of class members (variables and methods) and determine their visibility and accessibility from other sections of the program."
+            android:text="Access modifiers are used to control the visibility and accessibility of classes, members (fields, properties, methods, etc.), and other elements within a program. Access modifiers play a crucial role in encapsulation, one of the fundamental principles of object-oriented programming (OOP)."
             android:textColor="#000000"
             android:textIsSelectable="false"
             android:textSize="18sp"
